; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/i386/extr_host-mingw32.c_w32_error.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/i386/extr_host-mingw32.c_w32_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FORMAT_MESSAGE_ALLOCATE_BUFFER = common dso_local global i32 0, align 4
@FORMAT_MESSAGE_FROM_SYSTEM = common dso_local global i32 0, align 4
@FORMAT_MESSAGE_IGNORE_INSERTS = common dso_local global i32 0, align 4
@FORMAT_MESSAGE_MAX_WIDTH_MASK = common dso_local global i32 0, align 4
@LANG_NEUTRAL = common dso_local global i32 0, align 4
@SUBLANG_DEFAULT = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"internal error in %s, at %s:%d: %s: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32, i8*)* @w32_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @w32_error(i8* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i32, i32* @FORMAT_MESSAGE_ALLOCATE_BUFFER, align 4
  %11 = load i32, i32* @FORMAT_MESSAGE_FROM_SYSTEM, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @FORMAT_MESSAGE_IGNORE_INSERTS, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @FORMAT_MESSAGE_MAX_WIDTH_MASK, align 4
  %16 = or i32 %14, %15
  %17 = call i32 (...) @GetLastError()
  %18 = load i32, i32* @LANG_NEUTRAL, align 4
  %19 = load i32, i32* @SUBLANG_DEFAULT, align 4
  %20 = call i32 @MAKELANGID(i32 %18, i32 %19)
  %21 = bitcast i8** %9 to i8*
  %22 = call i32 @FormatMessageA(i32 %16, i32* null, i32 %17, i32 %20, i8* %21, i32 0, i32* null)
  %23 = load i32, i32* @stderr, align 4
  %24 = load i8*, i8** %5, align 8
  %25 = load i8*, i8** %6, align 8
  %26 = call i8* @trim_filename(i8* %25)
  %27 = load i32, i32* %7, align 4
  %28 = load i8*, i8** %8, align 8
  %29 = load i8*, i8** %9, align 8
  %30 = call i32 @fprintf(i32 %23, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i8* %24, i8* %26, i32 %27, i8* %28, i8* %29)
  %31 = load i8*, i8** %9, align 8
  %32 = ptrtoint i8* %31 to i32
  %33 = call i32 @LocalFree(i32 %32)
  ret void
}

declare dso_local i32 @FormatMessageA(i32, i32*, i32, i32, i8*, i32, i32*) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @MAKELANGID(i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*, i8*, i32, i8*, i8*) #1

declare dso_local i8* @trim_filename(i8*) #1

declare dso_local i32 @LocalFree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
